# mlops-workshop

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: inference.yml  train.yml
notebooks/: 00_setup.py  01_explore_data.py  02_baseline.py  02_train.py  03_experiment.py  03_tuning.py  04_inference.py  05_operations.py
scripts/: infer.py  sample_data.py  train.py
slides/: package.json  pnpm-lock.yaml  slides.md  styles.css
slides/draw/: 00.excalidraw  01.excalidraw  03.excalidraw  05.excalidraw  model_primer.excalidraw  pipeline_base.excalidraw  pipeline_inference.excalidraw  pipeline_monitoring.excalidraw  pipeline_training.excalidraw
src/mlops_workshop/: __init__.py  evaluate.py  features.py  inference.py  train.py
