[project]
name = "mlops-workshop"
version = "0.1.0"
description = "MLOps workshop using NYC Taxi data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "mlflow",
    "joblib",
    "plotly",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_workshop"]
